[package]
name = "rsis"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
data-buffer = "0.8.0"
rmp-serde = "1.1.0"

[dependencies.modellib]
git = "https://github.com/Sinfaen/rsis-app-interface"

[lib]
crate-type = ["dylib"]
