[package]
name = "affinetransform"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
rmp-serde = "1.0.0"
rmpv = "1.0.0"

[dependencies.modellib]
path = "../../core/modellib"

[lib]
crate-type = ["dylib"]
