[package]
name = "bufferread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
ndarray = { version = "0.15.4", features = ["serde"] }
num-complex = { version = "0.4.2", features = ["serde"] }
rmp-serde = "1.0.0"
rmpv = "1.0.0"

[dependencies.rsisappinterface]
git = "https://github.com/Sinfaen/rsis-app-interface"
version = "0.1.3"

[lib]
crate-type = ["dylib"]
