[package]
name = "sensor_rust"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
rand = "0.8.4"
statrs = "0.15.0"
rmp-serde = "1.0.0"
rmpv = "1.0.0"

[dependencies.modellib]
path = "../../../src/core/modellib"

[lib]
crate-type = ["dylib"]
